--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,11 @@ h3 {
   flex: 1 1 30%;
   display: inline-block;
   justify-content: center;
+  margin: 5px;
+}
+
+.proj1 {
+  width: 90%;
 }
 
 .bottom-container {
